# python-schema-validator

./: Dockerfile  Makefile  README.md  error_log.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yaml
schema_validator/: config.yaml  schema_validator.py
schema_validator/models/: log_model.py
schema_validator/tests/: test_schema_validator.py
schema_validator/tests/test_data/: test_data.json
