[tool.poetry]
name = "schema-validator"
version = "0.1.0"
description = "Small library for validating file schema"
authors = ["Krzysztof Ignasiak <kignasiak01@gmail.com>"]


[tool.poetry.dependencies]
python = "3.10"
pydantic = "1.8.1"


[tool.poetry.dev-dependencies]
pytest = "^6.2"


[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
